--- a/lab4/styles.css
+++ b/lab4/styles.css
@@ -1,70 +1,71 @@
-@import 'utilities.css';
-*{
+@import "utilities.css";
+* {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
-:root{
-  --primary:#3DCFD3;
+:root {
+  --primary: #3dcfd3;
   --dark: #161616;
-  --pure: #FFFFFF;
-  --ternary:#898989;
+  --pure: #ffffff;
+  --ternary: #898989;
   --light: F2F2F2;
-
+}
+label {
+  color: white; /*you can change the color */
 }
 body {
-  font-family: 'kode mono';
+  font-family: "kode mono";
 }
-.container{
+.container {
   max-width: 1152px;
   padding: 0 15px;
   margin: 0 auto;
 }
-header nav .left a{
-  color:var(--pure);
+header nav .left a {
+  color: var(--pure);
   text-decoration: none;
   margin-right: 2rem;
   text-transform: uppercase;
 }
-header nav .left a:hover{
-  color:var(--primary);
+header nav .left a:hover {
+  color: var(--primary);
 }
-header nav .profile-picture{
+header nav .profile-picture {
   margin-right: 3rem;
 }
-header{
-  background:var(--dark) ;
+header {
+  background: var(--dark);
   height: 850px;
-  clip-path:polygon(0 0,100% 0,100% 100%, 70% 87%, 0 100% );
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 70% 87%, 0 100%);
 }
 
-.hero{
+.hero {
   padding: 5rem 0;
 }
 .hero .right {
   color: var(--pure);
-
 }
-.hero .right h3{
+.hero .right h3 {
   color: var(--primary);
   margin-bottom: 2rem;
 }
-.hero .right h1{
+.hero .right h1 {
   font-size: 4rem;
   line-height: 1;
   margin-bottom: 2rem;
 }
-.hero .right h1 span{
-  color:#1c4370;
+.hero .right h1 span {
+  color: #1c4370;
 }
-.hero .right p{
+.hero .right p {
   line-height: 1.9;
   margin-bottom: 2rem;
 }
 .profile-picture {
   display: inline-block;
-  
+
   overflow: hidden;
 }
 
@@ -86,95 +87,92 @@ header{
 
 .hero .right-1 {
   color: var(--pure);
-  margin-left:  100px;
+  margin-left: 100px;
 }
-.hero .right-1 hr{
+.hero .right-1 hr {
   margin-top: -20px;
 }
-.hero .right-1 h3{
+.hero .right-1 h3 {
   color: var(--primary);
   margin-bottom: 2rem;
 }
-.hero .right-1 h1{
+.hero .right-1 h1 {
   font-size: 4rem;
   line-height: 1;
   margin-bottom: 2rem;
 }
-.hero .right-1 h1 span{
-  color:#1c4370;
+.hero .right-1 h1 span {
+  color: #1c4370;
 }
-.hero .right-1 p{
+.hero .right-1 p {
   line-height: 1.9;
   margin-bottom: 2rem;
 }
-.hero .right table{
+.hero .right table {
   margin-left: 10px;
 }
-.hero .right hr{
+.hero .right hr {
   margin-top: -20px;
 }
-.ul{
+.ul {
   list-style: none;
   margin-right: 10px;
 }
 
-
-
-
-.hero-1{
+.hero-1 {
   padding: 5rem 30%;
 }
 .hero-1 .right {
   color: var(--pure);
-
 }
-.hero-1 .right h3{
+.hero-1 .right h3 {
   color: var(--primary);
   margin-bottom: 2rem;
 }
-.hero-1 .right h1{
+.hero-1 .right h1 {
   font-size: 4rem;
   line-height: 1;
   margin-bottom: 2rem;
 }
-.hero-1 .right h1 span{
-  color:#1c4370;
+.hero-1 .right h1 span {
+  color: #1c4370;
 }
-.hero-1 .right p{
+.hero-1 .right p {
   line-height: 1.9;
   margin-bottom: 2rem;
 }
 
 .hero-1 .right-1 {
   color: var(--pure);
-  margin-left:  100px;
+  margin-left: 100px;
 }
-.hero-1 .right-1 h3{
+.hero-1 .right-1 h3 {
   color: var(--primary);
   margin-bottom: 2rem;
 }
-.hero-1 .right-1 h1{
+.hero-1 .right-1 h1 {
   font-size: 4rem;
   line-height: 1;
   margin-bottom: 2rem;
 }
-.hero-1 .right-1 h1 span{
-  color:#1c4370;
+.hero-1 .right-1 h1 span {
+  color: #1c4370;
 }
-.hero-1 .right-1 hr{
+.hero-1 .right-1 hr {
   margin-top: -20px;
 }
-.hero-1 .right-1 p{
+.hero-1 .right-1 p {
   line-height: 1.9;
   margin-bottom: 2rem;
 }
-.hero-1 .right table{
+.hero-1 .right table {
   margin-left: 10px;
 }
-.hero-1 .right hr{
+.hero-1 .right hr {
   margin-top: -20px;
 }
-#table1 th, #table1 td {
+#table1 th,
+#table1 td {
   border: 1px solid #dddddd;
   text-align: left;
   padding: 8px;
